Add real printf, handle tracehub IO

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,16 @@ include_directories(include)
 add_executable(meloader
         include/manifest.h
         manifest.c
-        map.c include/meloader.h me_abi.c kernel/threads.c romlib/mmio.c include/romlib.h romlib/thunks.c kernel/simple_io.c kernel/memory.c)
+        map.c
+        include/meloader.h
+        me_abi.c
+        kernel/threads.c
+        romlib/mmio.c
+        include/romlib.h
+        include/printf.h
+        include/numfmt.h
+        romlib/thunks.c
+        kernel/simple_io.c
+        kernel/memory.c
+        util/numfmt.c
+        util/printf.c periph/tracehub/gth.c include/tracehub.h periph/tracehub/rs1.c periph/tracehub/ftmr.c util/trace.c include/mipitrace.h)
