Add config for new peripherals

--- a/cfg/spt_lp.cfg
+++ b/cfg/spt_lp.cfg
@@ -4,6 +4,18 @@ spt_lp {
         cse_cfg = "cfg/csme.cfg";
     },
 
+    device thub {
+        type = tracehub;
+        bus = pch_prim;
+        bus_no = 0;
+        device_no = 31;
+        func_no = 7;
+        bar0 = 0xF7400000;
+        bar3 = 0xF7000000;
+        fake_probe = 1;
+        command = 2;
+    },
+
     library rom_user {
         path         = "testmod/romlib";
         base         = 0x1000;
