--- a/cfg/spt_lp.cfg
+++ b/cfg/spt_lp.cfg
@@ -16,6 +16,33 @@ spt_lp {
         command = 2;
     },
 
+    device fspi {
+        type = fastspi;
+        bus = pch_prim;
+        bus_no = 0;
+        device_no = 25;
+        func_no = 0;
+        sai = 0x40;
+        bar0 = 0xF461E000;
+        bar1 = 0xF3000000;
+        bar2 = 0xF2000000;
+        command = 2;
+
+        rom_image = "testmod/read_now.bin";
+        region_0_base = 0x0000;
+        region_0_limit = 0x1000;
+        region_0_csme_readable = 1;
+        region_2_base = 0x3000;
+        region_2_limit = 0x6FD000;
+        region_2_csme_readable = 1;
+        region_2_csme_writeable = 1;
+        jedec_00 = 0xEF;
+        jedec_01 = 0x40;
+        jedec_02 = 0x18;
+        comp_0_vscc = 0xFFD820E5;
+        comp_0_par_data_0 = 0xFFF120E5;
+    },
+
     library rom_user {
         path         = "testmod/romlib";
         base         = 0x1000;
