Added SAI support to sideband fabric

--- a/cfg/csme.cfg
+++ b/cfg/csme.cfg
@@ -42,6 +42,7 @@ csme {
         func_no = 5;
         bar0 = 0xF00A8000;
         bar1 = 0xF00A9000;
+        command = 2;
         att_win_0_int_ba  = 0xF2000000;
         att_win_0_ext_ba  = 0xF2000000;
         att_win_0_size    = 0x02000000;
