Add fusectl to spt_lp

--- a/cfg/spt_lp.cfg
+++ b/cfg/spt_lp.cfg
@@ -28,7 +28,7 @@ spt_lp {
         bar2 = 0xF2000000;
         command = 2;
 
-        rom_image = "testmod/read_now.bin";
+        rom_image = "testmod/unpack_img/test_img_c.bin";
         region_0_base = 0x0000;
         region_0_limit = 0x1000;
         region_0_csme_readable = 1;
@@ -41,6 +41,12 @@ spt_lp {
         jedec_02 = 0x18;
         comp_0_vscc = 0xFFD820E5;
         comp_0_par_data_0 = 0xFFF120E5;
+    },
+
+    device fuse_controller {
+        type = fuse_controller;
+        endpoint = 0xD5;
+        sai = 0x24;
     },
 
     library rom_user {
