--- a/cfg/spt_lp_bup.cfg
+++ b/cfg/spt_lp_bup.cfg
@@ -36,5 +36,8 @@ spt_lp_bup {
     },
     snowball prev_keys {
         size = 128;
+    },
+    snowball "ftpr.mft" {
+        path = "testmod/FTPR.man";
     }
 }
