Stub out select_receive syscall

--- a/cfg/spt_lp.cfg
+++ b/cfg/spt_lp.cfg
@@ -43,8 +43,8 @@ spt_lp {
         comp_0_par_data_0 = 0xFFF120E5;
     },
 
-    device fuse_controller {
-        type = fuse_controller;
+    device fusectl {
+        type = fusectl;
         endpoint = 0xD5;
         sai = 0x24;
     },
