--- a/cfg/spt_lp_bup.cfg
+++ b/cfg/spt_lp_bup.cfg
@@ -20,6 +20,7 @@ spt_lp_bup {
         romlib=rom_user;
         syslib=syslib_1205;
         cpu=cse_mIA486;
+        svendict="cfg/sven_lbg.cfg";
     },
     snowball bootpart {
         value = "FTPR";
