--- a/cfg/spt_lp.cfg
+++ b/cfg/spt_lp.cfg
@@ -43,6 +43,19 @@ spt_lp {
         comp_0_par_data_0 = 0xFFF120E5;
     },
 
+    device pmc {
+        type = pmc;
+        bus = pch_prim;
+        bus_no = 0;
+        device_no = 26;
+        func_no = 0;
+        bar0 = 0xF461A000;
+        bar1 = 0xF4628000;
+        command = 2;
+        sai = 0x2A;
+        d31id = 0x9D00;
+    },
+
     device fusectl {
         type = fusectl;
         endpoint = 0xD5;
