Implement DFX aggregator

--- a/cfg/spt_lp.cfg
+++ b/cfg/spt_lp.cfg
@@ -62,6 +62,13 @@ spt_lp {
         sai = 0x24;
     },
 
+    device dfxagg {
+        type = dfxagg;
+        endpoint = 0xB7;
+        sai = 0x2E;
+        puid = 0x012345678ABCDEF;
+    },
+
     library rom_user {
         path         = "testmod/romlib";
         base         = 0x1000;
