Add some custom SVEN dictionary entries

--- a/cfg/spt_lp.cfg
+++ b/cfg/spt_lp.cfg
@@ -69,6 +69,13 @@ spt_lp {
         puid = 0x012345678ABCDEF;
     },
 
+    device exi {
+        type = exi;
+        endpoint = 0xB8;
+        sai = 0x2E;
+        ectrl = 0x100;
+    },
+
     library rom_user {
         path         = "testmod/romlib";
         base         = 0x1000;
