Implement HECI FS, GS decoding

--- a/cfg/csme.cfg
+++ b/cfg/csme.cfg
@@ -55,5 +55,14 @@ csme {
         att_win_2_ext_ba  = 0xF7000000;
         att_win_2_size    = 0x00500000;
         att_win_2_control = 0x12040001;
+    },
+    device cse_heci1 {
+        type = heci;
+        bus = cse_func;
+        device_no = 0;
+        func_no = 0;
+        bar0 = 0xF0080000;
+        command = 2;
+        sai = 1;
     }
 }
