Add OCS RSA engine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.13)
 project(meloader C)
-
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 set(CMAKE_C_STANDARD 11)
-set (CMAKE_C_FLAGS "-m32")
-include_directories(include)
-
+find_package (GMP REQUIRED)
+find_library(gmp gmp)
+include_directories(${GMP_INCLUDE_DIR} include lib/include)
+link_directories(lib)
 add_executable(meloader
         include/manifest.h
         user/loader/manifest.c
@@ -79,4 +80,126 @@ add_executable(meloader
         periph/gasket/att/dev.c
         include/gasket/att/regs.h
         periph/spi/dev.c
-        periph/ocs/dev.c include/ocs/dev.h include/ocs/sks.h include/ocs/hash/hash.h include/ocs/aes.h include/fastspi.h periph/fuse/fusectl.c include/fusectl.h user/kernel/select.c periph/pmc/dev.c include/pmc.h periph/dfxagg/dev.c include/dfxagg.h include/exi.h periph/exi/dev.c periph/gasket/heci/dev.c include/gasket/heci/heci.h periph/gasket/heci/status.c)
+        periph/ocs/dev.c
+        include/ocs/dev.h
+        include/ocs/sks.h
+        include/ocs/hash/hash.h
+        include/ocs/aes.h
+        include/fastspi.h
+        periph/fuse/fusectl.c
+        include/fusectl.h
+        user/kernel/select.c
+        periph/pmc/dev.c
+        include/pmc.h
+        periph/dfxagg/dev.c
+        include/dfxagg.h
+        include/exi.h
+        periph/exi/dev.c
+        periph/gasket/heci/dev.c
+        include/gasket/heci/heci.h
+        periph/gasket/heci/status.c
+        periph/gasket/enclave/dev.c
+        include/gasket/enclave/enclave.h
+        periph/susram/dev.c
+        include/susram.h
+        periph/misa/sram.c periph/misa/rom.c util/hwif.c include/hwif.h periph/gasket/gen/dev.c include/gasket/gen/dev.h periph/smt/dev.c include/smt.h periph/ocs/dma/gp_unit.c include/ocs/gp.h include/gasket/timer/apptimer.h periph/gasket/timer/apptimer.c periph/ocs/rsa/rsa.c include/ocs/rsa.h)
+
+set_target_properties(meloader PROPERTIES COMPILE_FLAGS "-m32")
+
+add_executable(pchemu
+        include/manifest.h
+        include/user/meloader.h
+        include/user/romlib.h
+        include/printf.h
+        include/numfmt.h
+        util/numfmt.c
+        util/printf.c
+        periph/tracehub/gth.c
+        include/tracehub.h
+        periph/tracehub/rs1.c
+        periph/tracehub/ftmr.c
+        util/trace.c
+        include/mipitrace.h
+        include/user/syslib.h
+        periph/ocs/sks/sks.c
+        periph/spi/spi.c
+        periph/ocs/hash/hash.c
+        periph/ocs/aes/aes.c
+        include/ocs/hash/sha256.h
+        periph/ocs/hash/sha256.c
+        include/ocs/hash/rotate-bits.h
+        include/grant.h
+        periph/ocs/dma/gpdma.c
+        include/ocs/gpdma.h
+        periph/sideband/sbdev.c
+        include/sideband.h
+        util/log.c
+        include/log.h
+        include/cfg_file.h
+        config/cfgparser.c
+        config/devreg.c
+        include/devreg.h
+        include/misa/regs.h
+        include/misa/emu.h
+        include/pci/bus.h
+        include/pci/device.h
+        include/pci/cfgspace.h
+        periph/pci/master.c
+        periph/pci/simplefunc.c
+        periph/pci/config.c
+        periph/misa/hunit.c
+        periph/misa/aunit/upstream.c
+        periph/misa/bunit.c
+        periph/misa/aunit/bus_target.c
+        periph/misa/aunit/iommu.c
+        periph/misa/dev.c
+        include/fsb.h
+        periph/cpu/usercpu.c
+        include/cpu/usercpu.h
+        util/file.c
+        include/file.h
+        periph/gasket/prim2gasket/dev.c
+        periph/gasket/att/prim_bus.c
+        periph/gasket/att/prim_regs.c
+        periph/gasket/att/sb_regs.c
+        periph/gasket/att/sb_master.c
+        periph/gasket/att/dev.c
+        include/gasket/att/regs.h
+        periph/spi/dev.c
+        periph/ocs/dev.c
+        include/ocs/dev.h
+        include/ocs/sks.h
+        include/ocs/hash/hash.h
+        include/ocs/aes.h
+        include/fastspi.h
+        periph/fuse/fusectl.c
+        include/fusectl.h
+        periph/pmc/dev.c
+        include/pmc.h
+        periph/dfxagg/dev.c
+        include/dfxagg.h
+        include/exi.h
+        periph/exi/dev.c
+        periph/gasket/heci/dev.c
+        include/gasket/heci/heci.h
+        periph/gasket/heci/status.c
+        periph/susram/dev.c
+        include/susram.h
+        periph/misa/sram.c
+        periph/misa/rom.c
+        include/cpu/unicorncpu.h
+        periph/cpu/unicorncpu.c
+        system/pchemu.c
+        periph/gasket/enclave/dev.c
+        include/gasket/enclave/enclave.h
+        periph/gasket/gen/dev.c
+        include/gasket/gen/dev.h
+        periph/smt/dev.c
+        include/ocs/gp.h
+        periph/ocs/dma/gp_unit.c
+        include/gasket/timer/apptimer.h
+        periph/gasket/timer/apptimer.c
+        periph/ocs/rsa/rsa.c
+        include/ocs/rsa.h)
+
+target_link_libraries(pchemu ia32 gmp)
