--- a/cfg/spt_h.cfg
+++ b/cfg/spt_h.cfg
@@ -1,4 +1,4 @@
-spt_lp {
+spt_h {
 
     include csme_region {
         cse_cfg = "cfg/csme.cfg";
@@ -28,12 +28,12 @@ spt_lp {
         bar2 = 0xF2000000;
         command = 2;
 
-        rom_image = "testmod/unpack_img/expl_img/rom_image.bin";
+        rom_image = "testh110/H110D3A.F20";
         region_0_base = 0x0000;
         region_0_limit = 0x1000;
         region_0_csme_readable = 1;
-        region_2_base = 0x3000;
-        region_2_limit = 0x6FD000;
+        region_2_base = 0x1000;
+        region_2_limit = 0x1ff000;
         region_2_csme_readable = 1;
         region_2_csme_writeable = 1;
         jedec_00 = 0xEF;
@@ -53,29 +53,7 @@ spt_lp {
         bar1 = 0xF4628000;
         command = 2;
         sai = 0x2A;
-        d31id = 0x9D00;
-    },
-
-    device smt0 {
-        type = smt;
-        bus = pch_prim;
-        bus_no = 0;
-        device_no = 10;
-        func_no = 0;
-        bar0 = 0xF4610000;
-        command = 2;
-        sai = 0x56;
-    },
-
-    device smt1 {
-        type = smt;
-        bus = pch_prim;
-        bus_no = 0;
-        device_no = 10;
-        func_no = 1;
-        bar0 = 0xF4611000;
-        command = 2;
-        sai = 0x56;
+        d31id = 0xA800;
     },
 
     device fusectl {
@@ -102,12 +80,6 @@ spt_lp {
         type = susram;
         endpoint = 0xB9;
         sai = 0x6C;
-    },
-
-    device drng {
-        type = drng;
-        endpoint = 0xD2;
-        sai = 0x2C;
     },
 
     library rom_user {
